# Airbnb_Analysis

./: EDA.py  notebook.py  predict.py  pyproject.toml  readme.md  requirements.txt  train.py
__marimo__/session/: EDA - copia.py.json  EDA.py.json
data/: acapulco.csv  bacalar.csv  cabo_san_lucas.csv  cancun.csv  ensenada.csv  isla_mujeres.csv  la_paz.csv  manzanillo.csv  mazatlan.csv  playa_del_carmen.csv  puerto_escondido.csv  puerto_morelos.csv  puerto_vallarta.csv  rosarito.csv  san_jose_del_cabo.csv  san_miguel_de_cozumel.csv  sayulita.csv  tulum.csv
